# Artha

./: .coderabbit.yaml  .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  README.md  agent.py  analyst.py  company_analysis.py  config.py  kite_runtime.py  main.py  mcp_server.py  models.py  orchestrator.py  pyproject.toml  rebalance.py  reliability.py  requirements.txt  research.py  snapshot_store.py  suggestions.md  test_cdsl_run.py  tools.py  usage_tracking.py
.github/: copilot-instructions.md  dependabot.yml
analysis/: __init__.py  analyst.py  analyst_judging.py  analyst_llm.py  analyst_prompt.py  analyst_runtime.py  analyst_yfinance.py  artifact_builder.py  company.py  data_card.py  data_card_helpers.py  data_card_sections.py  fallback.py  fiscal.py  judge.py  provider_debug.py  source_map.py  tool_router.py  verify.py
api/: __init__.py  main.py
application/: __init__.py  agent.py  context_builders.py  events.py  orchestrator.py  reporting.py  research.py  research_orchestrator.py  research_utils.py  run_helpers.py  verdict_ops.py
cli/: commands.py  display.py  format.py  parser.py
cov_annotate/: main.py,cover  tools.py,cover  z_10fae538ba4e8521___init__.py,cover  z_10fae538ba4e8521_main.py,cover
kite/: __init__.py  client.py  coerce.py  macro.py  portfolio.py  price.py  provider_payloads.py  runtime.py  session.py  tool_dispatch.py  tools.py  yfinance_tools.py
models/: __init__.py  analyst.py  data_card.py  macro.py  portfolio.py  research.py  verdict.py
observability/: __init__.py  pricing.py  (+7 more)
(+79 files in other folders)
